@@ -976,7 +976,7 @@ is_prime(IN SV* svn, ...)
                    } break;
           case 9:  ret = is_frobenius_underwood_pseudoprime(n); break;
           case 10: ret = is_frobenius_khashin_pseudoprime(n); break;
-          case 11: ret = is_perrin_pseudoprime(n); break;
+          case 11: ret = is_perrin_pseudoprime(n,a > 0); break;
           case 12: ret = is_catalan_pseudoprime(n); break;
           case 13: ret = is_almost_extra_strong_lucas_pseudoprime
                          (n, (items == 1) ? 1 : a); break;
